--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
   "homepage": "https://github.com/foxfriends/paper-wars-web#readme",
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
+    "autoprefixer": "^9.8.6",
     "copy-webpack-plugin": "^6.0.3",
+    "css-loader": "^4.2.1",
+    "mini-css-extract-plugin": "^0.10.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.2.3",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
