--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "watch": "webpack --watch",
+    "watch": "api_url=http://localhost:3000 webpack --watch",
     "start": "cargo run --bin web --features bin",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
