--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^9.8.6",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^4.2.1",
+    "cssnano": "^4.1.10",
     "mini-css-extract-plugin": "^0.10.0",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.3",
