--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,14 @@ crate-type = ["cdylib", "rlib"]
 bin = ["rocket", "rocket_contrib", "dotenv", "tokio"]
 
 [dependencies]
+anyhow = "1.0"
+client = { path = "../client" }
 lazy_static = "1.4"
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
 yew = "0.17"
 yew-router = "0.14"
 yewtil = "0.3"
-client = { path = "../client" }
 
 [dependencies.dotenv]
 optional = true
@@ -38,3 +40,10 @@ optional = true
 features = ["macros"]
 optional = true
 version = "0.2"
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+    "Storage",
+    "Window",
+]
